<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VkMsgSchedule</string>
    <string name="title_activity_main">Vk Message Schedule</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_start_service">Старт</string>
    <string name="btn_stop_service">Стоп</string>
    <string name="settings_menu">Настройки</string>
    <string name="about">О программе</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="start_menu">Старт</string>
    <string name="stop_menu">Стоп</string>
    <string name="btn_settings">Настройки</string>
    <string name="current_settings_label">Текущие настройки:</string>
    <string name="user_id_label">Id пользователя: </string>
    <string name="schedule_period_label">Период отправки: </string>
    <string name="msg_type_label">Тип сообщения: </string>
    <string name="msg_text_label">Текст сообщения: </string>
    <string name="btn_restart">Рестарт</string>
    <string name="restart_menu">Рестарт</string>
    <string name="is_online_label">Отправка в онлайн: </string>
    <string name="is_unread_msg">Отправка при непрочитанных: </string>
    <string name="load_msg_num">Количество сообщений: </string>

    <string-array name="msgType">
        <item>Текст</item>
        <item>Случайный набор чисел</item>
    </string-array>

    <string-array name="msgType_values">
        <item>text</item>
        <item>int</item>
    </string-array>
</resources>
